--- a/GimDataSource/packages.config
+++ b/GimDataSource/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
+  <package id="Neo4j.Driver" version="1.7.1" targetFramework="net472" />
+  <package id="Neo4j.Driver.Signed" version="1.7.1" targetFramework="net472" />
+  <package id="Neo4jClient" version="3.1.0.6" targetFramework="net472" />
+  <package id="Neo4jClient.Extension" version="1.0.2" targetFramework="net472" />
+  <package id="Neo4jClient.Extension.Attributes" version="1.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
 </packages>
