--- a/GimOnRevit/GimOnRevit.csproj
+++ b/GimOnRevit/GimOnRevit.csproj
@@ -75,6 +75,10 @@
     <Compile Include="Helper\LabelHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RevitFile.cs" />
+    <Compile Include="TestJson\BipParameter.cs" />
+    <Compile Include="TestJson\CategoryJsonWrapper.cs" />
+    <Compile Include="TestJson\TestJsonController.cs" />
+    <Compile Include="TestJson\UnitType.cs" />
     <Compile Include="Wrapper\IParameterValueWrapper.cs" />
     <Compile Include="Wrapper\FamilyParameterValueWrapper.cs" />
     <Compile Include="Wrapper\ParameterValueWrapper.cs" />
