Squashed commit of the following:
commit 9177845cef4402495e37a3a9ccf89e5b08309eab
Author: rascer <erichraschle@gmail.com>
Date:   Thu Apr 25 00:20:09 2019 +0200

    Set start project "add-in"

commit e1c66a85ae0af80c87bb86e71fbf2038dd719c30
Merge: 6286022 279ef36
Author: rascer <erichraschle@gmail.com>
Date:   Thu Apr 25 00:09:56 2019 +0200

    Merge branch 'master' of https://github.com/eraschle/SharpGim

commit 62860226cba94e07c04ca7304258bdd2fa16b437
Author: rascer <erichraschle@gmail.com>
Date:   Thu Apr 25 00:07:08 2019 +0200

    Dialog with UserControl implemented

--- a/GimRevitAddin/GimRevitAddin.csproj
+++ b/GimRevitAddin/GimRevitAddin.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -68,6 +69,12 @@
       <DependentUpon>DocumentationView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Docs\View\DocumentationViewModel.cs" />
+    <Compile Include="Helper\WpfDialogView.xaml.cs">
+      <DependentUpon>WpfDialogView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Helper\WpfDialogViewModel.cs" />
+    <Compile Include="Helper\IDialogContentViewModel.cs" />
+    <Compile Include="Helper\WpfDialog.cs" />
     <Compile Include="Journal\FileCreationManager.cs" />
     <Compile Include="Journal\CreateJournalCommand.cs" />
     <Compile Include="Docs\DocumentationCommand.cs" />
@@ -97,6 +104,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Docs\View\DocumentationView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Helper\WpfDialogView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
