Zwischenstand überarbeitung Json Ausgabe.

--- a/GimDomain/GimDomain.csproj
+++ b/GimDomain/GimDomain.csproj
@@ -35,6 +35,9 @@
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,6 +53,7 @@
     <Compile Include="Helpers\EnvVar.cs" />
     <Compile Include="Helpers\Events\ANotifyPropertyChangedModel.cs" />
     <Compile Include="Helpers\Events\RelayCommand.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Model\Attribute\GimAttribute.cs" />
     <Compile Include="Model\Attribute\GimAttributeDefinition.cs" />
     <Compile Include="Model\Attribute\GimAttributeValue.cs" />
@@ -59,6 +63,7 @@
     <Compile Include="Model\Component\GimProduct.cs" />
     <Compile Include="Model\Component\GimProductInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Writer\GimJsonWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
