--- a/GimOnRevit/GimOnRevit.csproj
+++ b/GimOnRevit/GimOnRevit.csproj
@@ -70,9 +70,9 @@
     <Compile Include="Documentation\Model\Parameter.cs" />
     <Compile Include="Documentation\DocumentationSetting.cs" />
     <Compile Include="Helper\ConvertHelper.cs" />
-    <Compile Include="Helper\FileHelper.cs" />
     <Compile Include="Helper\Journal\JournalHelper.cs" />
     <Compile Include="Helper\LabelHelper.cs" />
+    <Compile Include="Helper\ViewHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RevitFile.cs" />
     <Compile Include="TestJson\BipParameter.cs" />
