Output-Verzeichnis & Library-Root-Path eingefügt Anpassungen GUI TODO: Check up, ob die Datei oder das Verzeichniss mit den Familien bestandteil des Library Path ist

--- a/GimDomain/GimDomain.csproj
+++ b/GimDomain/GimDomain.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\Directories.cs" />
+    <Compile Include="Helpers\DirectoryHelper.cs" />
     <Compile Include="Helpers\EnvVar.cs" />
     <Compile Include="Helpers\Events\ANotifyPropertyChangedModel.cs" />
     <Compile Include="Helpers\Events\RelayCommand.cs" />
